css/wr.css
tr:not(.irregular_tr):nth-child(even), tr.irregular_tr:nth-child(odd) {
    background-color: #dddddd;
}
.HRtPt th, .HRtPp, .HRtP {
    color: white;
    background-color: #b6423c;
}
.SoEWt th, .SoEWp, .SoEW {
    color: white;
    background-color: #7d3884;
}
.PoDDt th, .PoDDp, .PoDD {
    background-color: gold;
}
.LLSt th, .LLSp, .LLS {
    background-color: #90ee90;
}
.MSt th, .MSp, .MS {
    color: white;
    background-color: #ae11d5;
}
.EoSDt th, .EoSDp, .EoSD {
    background-color: #ff2400;
}
.PCBt th, .PCBp, .PCB {
    background-color: #ff8ed2;
}
.INt th, .INp, .IN {
    color: white;
    background-color: #339;
}
.PoFVt th, .PoFVp, .PoFV {
    background-color: #009973;
}
.MoFt th, .MoFp, .MoF {
    background-color: #96b300;
}
.SAt th, .SAp, .SA {
    color: white;
    background-color: #591400;
}
.UFOt th, .UFOp, .UFO {
    color: white;
    background-color: #4169e1;
}
.GFWt th, .GFWp, .GFW {
    background-color: #00c8c8;
}
.TDt th, .TDp, .TD {
    background-color: #4a808c;
}
.DDCt th, .DDCp, .DDC {
    background-color: #a77;
}
.LoLKt th, .LoLKp, .LoLK {
    color: white;
    background-color: #6a47be;
}
.HSiFSsmallt th, .HSiFSt th, .HSiFSp, .HSiFS {
    color: white;
    background-color: #176e0e;
}
.WBaWCt th, .WBaWCp, .WBaWC {
    color: white;
    background-color: #190e0e;
}
.UMt th, .UMp, .UM {
    background-color: #23fcb1;
}
.unver {
    color: darkred;
}
.dimgrey {
    color: #696969;
}
.replay {
    color: inherit;
    text-decoration: none;
}
.general_header {
    background-color: #aaaaaa;
}
.cover, .game_img {
    display: inline-block;
    height: 50px;
    width: 50px;
}
.game_img {
    cursor: pointer;
}
.sheet_1 {
    background-image: url('../shared/spritesheets/game_sheet50x50_1.png');
}
.sheet_2 {
    background-image: url('../shared/spritesheets/game_sheet50x50_2.png');
}
.cover98 {
    border: 1px solid #000;
}
.Spring {
    color: #990099;
}
.Summer {
    color: green;
}
.Autumn {
    color: #8D4500;
}
.Winter {
    color: blue;
}
.does_not_even_score {
    color: #B60000;
    font-weight: bold;
}
.barely_even_scores {
    color: #894800;
    font-weight: bold;
}
.moderately_even_scores {
    color: green;
    font-weight: bold;
}
.does_even_score {
    color: #00008B;
    font-weight: bold;
}
.does_even_score_well {
    color: #990099;
    font-weight: bold;
}
.cs, .unver_container {
    cursor: help;
    position: relative;
    border-bottom: 1px dotted black;
}
.cs .tooltip, .unver_container .tooltip {
    left: 80%;
    margin-left: -60px;
}
.game_image {
    position: relative;
}
.game_image .tooltip {
    left: 0%;
    margin-left: -60px;
}
.cs:hover .tooltip, .game_image:hover .tooltip, .unver_container:hover .tooltip {
    visibility: visible;
}
.tooltip {
    font-weight: initial;
    visibility: hidden;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    top: 100%;
}
.truescore {
    width: 150px;
}
.truescores, .full_name {
    width: 300px;
}
.dl_icon {
    width: 11px;
    height: 11px;
    display: inline-block;
    background-image: url('../games/wr/dl.png');
}
.head {
    content: '';
    display: table-cell;
}
.hidden, #overall_linkm, #overall_linkmn, #overallm, #wr_list, #player_list, #player_search, #seasontoggle, #newlayout, #playersearchlink, #contents_new, #recent_linkm, #recent_linkmn, #recentm {
    display: none;
}
#newlayout, #player_search {
    text-align: center;
}
#wrap:after {
    content: '\200C';
    display: block;
    line-height: 1em;
    color: #000;
}
#nav {
    margin-bottom: 5px;
}
#wr_list, #player_list {
    margin-top: 10px;
}
#world {
    margin-bottom: 15px;
}
#checkboxes, #ranking {
    margin-top: 15px;
}
#recent_limit {
    width: 50px;
}
#ranking.sortable tbody {
    counter-reset: sortabletablescope;
}
#ranking.sortable tbody td:first-child::before {
    content: counter(sortabletablescope);
    counter-increment: sortabletablescope;
}
#toggle {
    float: left;
}
#dates {
    margin-top: 0px;
    margin-bottom: 0px;
}
#contents > p, #contents_new > p {
    margin: 4px;
}
#HRtP_image, #HRtP_image_old {
    background-position: 0px 0px;
}
#SoEW_image, #SoEW_image_old {
    background-position: -50px 0px;
}
#PoDD_image, #PoDD_image_old {
    background-position: -100px 0px;
}
#LLS_image, #LLS_image_old {
    background-position: -150px 0px;
}
#MS_image, #MS_image_old {
    background-position: -200px 0px;
}
#EoSD_image, #EoSD_image_old {
    background-position: -250px 0px;
}
#PCB_image, #PCB_image_old {
    background-position: -300px 0px;
}
#IN_image, #IN_image_old {
    background-position: -350px 0px;
}
#PoFV_image, #PoFV_image_old {
    background-position: -400px 0px;
}
#StB_image, #StB_image_old {
    background-position: -450px 0px;
}
#MoF_image, #MoF_image_old {
    background-position: 0px 0px;
}
#SA_image, #SA_image_old {
    background-position: -50px 0px;
}
#UFO_image, #UFO_image_old {
    background-position: -100px 0px;
}
#DS_image, #DS_image_old {
    background-position: -150px 0px;
}
#GFW_image, #GFW_image_old {
    background-position: -200px 0px;
}
#TD_image, #TD_image_old {
    background-position: -250px 0px;
}
#DDC_image, #DDC_image_old {
    background-position: -300px 0px;
}
#LoLK_image, #LoLK_image_old {
    background-position: -350px 0px;
}
#HSiFS_image, #HSiFS_image_old {
    background-position: -400px 0px;
}
#WBaWC_image, #WBaWC_image_old {
    background-position: -450px 0px;
}
#UM_image, #UM_image_old {
    background-position: -500px 0px;
}
@media only screen and (min-width: 1550px) and (max-width: 1750px) {
    .wrap {
        margin-left: 20%;
        margin-right: 20%;
    }
}
@media only screen and (min-width: 800px) and (max-width: 1150px) {
    h1 {
        margin-bottom: 15px;
        margin-top: 0px;
    }
    h2 {
        margin-bottom: 10px;
        margin-top: 5px;
    }
    .wrap {
        margin-left: 8%;
        margin-right: 8%;
    }
    #description {
        padding-left: 50px;
        padding-right: 50px;
    }
}
@media only screen and (max-width: 800px) {
    h1 {
        margin-bottom: 15px;
        margin-top: 0px;
    }
    h2 {
        margin-bottom: 10px;
        margin-top: 5px;
    }
    #description {
        padding-left: 0px;
        padding-right: 0px;
    }
}

